# StarustAPI

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: admin.rs  fun.rs  health.rs  info.rs  mod.rs
src/utils/: mod.rs
